--- a/styles/JoinRoom.css
+++ b/styles/JoinRoom.css
@@ -4,16 +4,21 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: linear-gradient(to bottom, #141e30, #243b55);
+    background-color: #79b168; /* Lush green base */
+    background-image: 
+      radial-gradient(circle, #6f9d44 12%, transparent 2%), 
+      radial-gradient(circle, #a67c52 12%, transparent 2%), 
+      radial-gradient(circle, #c2aa70 12%, transparent 2%);
+    background-size: 20px 20px, 25px 25px, 30px 30px;
+    background-position: 0 0, 10px 10px, -5px -5px;
     color: white;
-    font-family: 'Arial', sans-serif;
   }
   
   .title {
+    font-family: 'Press Start 2P', cursive;
     font-size: 2.5rem;
+    text-shadow: 1px 1px #000;
     margin-bottom: 20px;
-    color: #00ccff;
-    text-shadow: 2px 2px #000;
   }
   
   .join-room-form {
@@ -24,41 +29,47 @@
   
   .join-room-form label {
     font-size: 1.2rem;
+    text-shadow: 1px 1px #000;
   }
   
   .join-room-form input,
   .join-room-form select {
     padding: 10px;
     font-size: 1rem;
-    border: none;
+    border: 3px solid black;
     border-radius: 5px;
+    box-shadow: inset 0 0 10px #000;
   }
   
   .join-room-button {
-    padding: 10px 20px;
+    font-family: 'Press Start 2P', cursive;
     font-size: 1rem;
-    background-color: #00ccff;
-    color: white;
-    border: none;
-    border-radius: 5px;
+    padding: 10px 20px;
+    background-color: #f9d342;
+    color: black;
+    border: 3px solid black;
+    box-shadow: 0.25rem 0.5rem black;
     cursor: pointer;
-    box-shadow: 0 4px #0094cc;
-    transition: all 0.3s ease;
+    text-shadow: 0.125rem 0.125rem #ffffff;
+    transition: transform 0.2s, background-color 0.2s, box-shadow 0.2s ease;
   }
   
   .join-room-button:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 6px #0094cc;
+    background-color: #d1345b;
+    color: white;
+    transform: scale(1.05);
   }
   
   .join-room-button:active {
     transform: translateY(2px);
-    box-shadow: 0 2px #0094cc;
+    box-shadow: 0 2px black;
   }
   
   .message {
-    margin-top: 15px;
+    margin-top: 20px;
     font-size: 1rem;
     color: yellow;
+    text-shadow: 1px 1px #000;
     text-align: center;
   }
+  
